--- a/templates/results.html
+++ b/templates/results.html
@@ -1,1 +1,15 @@
-<h1>Results</h1>
+<h1>Top 10 Colors</h1>
+
+{% for color in colors %}
+    <div style="display:flex;align-items:center;margin-bottom:10px;">
+        <div style="
+            width:40px;
+            height:40px;
+            background-color: {{ color.hex }};
+            border:1px solid #000;
+            margin-right:10px;">
+        </div>
+
+        <p>RGB: {{ color.rgb }} | HEX: {{ color.hex }} | Count: {{ color.count }}</p>
+    </div>
+{% endfor %}
